<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:fitsSystemWindows="true"
tools:openDrawer="start">

<!-- Holds the Toolbar and a nested LinearLayout-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- This Toolbar will be used as our action bar using setSupportActionBar() -->
    <android.support.v7.widget.Toolbar
        android:fitsSystemWindows="true"
        android:id="@+id/drawer_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:theme="@style/ToolBarCustom"
        android:theme="@style/ToolBarCustom"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- This LinearLayout will be displayed below the Toolbar and contain our "main" views -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DrawerLayout with Toolbar." />
    </LinearLayout>
</FrameLayout>

<LinearLayout
    android:id="@+id/drawer_linearLayout"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    android:layout_gravity="left|start"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/drawer_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/drawer_head_pic"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/drawer_head_logo"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:src="@drawable/drawer_logo"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/drawer_head_pic_text_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/drawer_head_pic_text_2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/drawer_head_pic_text_3"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/drawer_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_me"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_my_number"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="3dp"
                android:layout_gravity="center"
                android:text="093-12-35-678"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:clickable="true"
        android:id="@+id/drawer_itempresent_button"
        android:onClick="onClickDrawer"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/drawer_onclick_item">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_present"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_actions"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </Button>
    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_mycard_button"
        android:clickable="true"
        android:onClick="onClickDrawer"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@color/drawer_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_visa"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_my_card"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </Button>
    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/drawer_history_button"
        android:clickable="true"
        android:onClick="onClickDrawer"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/drawer_onclick_item">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_history"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_history"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@color/drawer_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/fa_vk"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_share"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@color/drawer_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_phone"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_call"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@color/drawer_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/item_signout"
                android:layout_marginLeft="20dp"
                android:layout_width="22dp"
                android:layout_height="22dp"/>
            <TextView
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/item_exit"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:gravity="bottom|right">
            <ImageView
                android:layout_width="202dp"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_margin="5dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/border_image"/>
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/drawer_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Андрей Петросян"
            />
    </LinearLayout>
</LinearLayout>

</android.support.v4.widget.DrawerLayout>