<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.NoActionBar"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_in_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <EditText
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white"
                android:gravity="left"
                android:id="@+id/inputEmail"
                android:layout_width="250dp"
                android:paddingLeft="70dp"
                android:paddingRight="20dp"
                android:layout_height="30dp"
                android:background="@drawable/edit_text_email"
                android:layout_marginBottom="6dp"
                android:inputType="textEmailAddress"/>
            <EditText
                android:paddingLeft="75dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white"
                android:gravity="left"
                android:id="@+id/inputPassword"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/edit_text_password"
                android:inputType="textPassword"/>
            <Button
                android:onClick=""
                android:id="@+id/enter_button"
                android:textSize="15sp"
                android:text="@string/enter"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:background="@drawable/enter_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|bottom">
            <TextView
                android:onClick="onClick"
                android:id="@+id/registration_button"
                android:textColor="@drawable/registration_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"/>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha="0.4"/>
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="или"
                    android:textColor="@color/white"
                    android:layout_weight="0.3"
                    android:alpha="0.4"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha="0.4"/>
            </LinearLayout>
            <LinearLayout
                android:background="@color/blue_vk"
                android:alpha="0.85"
                android:onClick=""
                android:id="@+id/vk_button"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:src="@drawable/fa_vk"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/vkbutton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
